--- a/exploration.html
+++ b/exploration.html
@@ -35,7 +35,7 @@
                 <ul class="nav kilo">
                     <li><a href="index.html">Planet</a></li>
                     <li><a href="moons.html">Moons</a></li>
-                    <li><a href="#">Exploration</a></li>
+                    <li><a href="exploration.html">Exploration</a></li>
                 </ul>
             </nav>
         </div>
