--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <ul class="nav kilo">
                 <li><a href="index.html">Planet</a></li>
                 <li><a href="moons.html">Moons</a></li>
-                <li><a href="#">Exploration</a></li>
+                <li><a href="exploration.html">Exploration</a></li>
             </ul>
         </nav>
     </div>
