Media Queries Detail
Details added
Content on Moons page added

--- a/exploration.html
+++ b/exploration.html
@@ -32,7 +32,7 @@
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-2-3 island-half">
             <nav>
-                <ul class="nav kilo">
+                <ul class="nav navbottom kilo">
                     <li><a href="index.html">Planet</a></li>
                     <li><a href="moons.html">Moons</a></li>
                     <li><a href="exploration.html">Exploration</a></li>
