text align correction
level of awesomeness buttons stacked

--- a/exploration.html
+++ b/exploration.html
@@ -52,14 +52,21 @@
             <label for="age">Age</label>
             <input type="number" id="age">
         </div>
+            
         <div>
             <p class="pad-top"><i>Your level of awesomeness</i></p>
-            <input type="radio" id="meh" name="meh">
-            <label for="meh">Meh...</label>
-            <input type="radio" id="pretty-good" name="pretty-good">
-            <label for="pretty-good">Pretty Good</label>
-            <input type="radio" id="super" name="super">
-            <label for="super">Super!</label>
+            <span class="radio">
+                <input type="radio" id="meh" name="meh">
+                <label for="meh">Meh...</label>
+            </span>
+            <span class="radio">
+                <input type="radio" id="pretty-good" name="pretty-good">
+                <label for="pretty-good">Pretty Good</label>
+            </span>
+            <span class="radio">
+                <input type="radio" id="super" name="super">
+                <label for="super">Super!</label>
+            </span>
         </div>
         
         <div class="pad-top pad-bottom">
