--- a/exploration.html
+++ b/exploration.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
-  <meta charset="utf-8">
-  <title>Saturn</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/main.css" rel="stylesheet">
-  <link href="css/grid.css" rel="stylesheet">
-  <link href="css/typography.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>Saturn</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700|Merriweather:400,400italic,700" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/grid.css" rel="stylesheet">
+    <link href="css/typography.css" rel="stylesheet">
 </head>
 <body>
 
@@ -16,14 +17,20 @@
 </ul>
     
     <header role="banner" id="top" class="masthead">
-        <h1 class="header peta island">Saturn</h1>
-        <nav role="navigation" id="nav" class="island">
-            <ul class="nav giga">
-                <li><a class="island-half" href="index.html">Planet</a></li>
-                <li><a class="island-half" href="moons.html">Moons</a></li>
-                <li><a class="island-half" href="exploration.html">Exploration</a></li>
-            </ul>
-        </nav>
+        <div class="grid">
+            <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                <h1 class="header island">Saturn</h1>
+            </div>
+            <div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-2-3">
+                <nav role="navigation" id="nav" class="island">
+                    <ul class="nav giga brand-family">
+                        <li><a class="island-half" href="index.html">Planet</a></li>
+                        <li><a class="island-half" href="moons.html">Moons</a></li>
+                        <li><a class="island-half nav-current" href="exploration.html">Exploration</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
 
 <main role="main" id="main">    
@@ -92,7 +99,7 @@
                 <ul class="nav navbottom kilo">
                     <li><a href="index.html">Planet</a></li>
                     <li><a href="moons.html">Moons</a></li>
-                    <li><a href="exploration.html">Exploration</a></li>
+                    <li><a class="nav-current" href="exploration.html">Exploration</a></li>
                 </ul>
             </nav>
         </div>
